added important stuffffs

--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,6 +1,21 @@
 head(lang='en')
+
   meta(charset='UTF-8')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
+  meta(name='author', content='http://tca.my')
+  meta(name='title', content='mygamedev')
+  meta(name='description', content='mygamedev')
+  meta(property='og:locale', content='en_US')
+  meta(property='og:url', content='http://mygamedev.asia/')
+  meta(property='og:title', content='mygamedev')
+  //meta(property='og:description', content='Experience Better. Experience More. Experience Us')
+  //meta(property='og:image', content='img/small-icon.png')
+  meta(property='og:site_name', content='mygamedev.asia')
+  //meta(name='twitter:url', content='http://mygamedev.asia/')
+  //meta(name='twitter:card', content='summary')
+  //meta(name='twitter:creator', content='@https://twitter.com/BiteConcepts')
+  //meta(name='twitter:site', content='@BiteConcepts')
+
   title MYGAMEDEV
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.min.css')
