--- a/views/index.jade
+++ b/views/index.jade
@@ -10,3 +10,5 @@ html
       include index/four
     script(src='/components/jquery/dist/jquery.min.js')
     script(src='/components/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/components/console.image/console.image.min.js')
+    script(src='/js/index.js')
