--- a/views/index/four.jade
+++ b/views/index/four.jade
@@ -19,7 +19,8 @@
     .row.bottom-spacer
 
   .visible-xs.visible-sm
-    .row
+
+    .row(style="margin-right: 0px; margin-left: 0px;")
       .col-md-6.col-md-offset-1(style="margin-left: 40px;margin-right: 40px;")
         .contact-sheet.mobile-contact-sheet
           img.mobile-banner.img-responsive(src='/img/four/sm.png')
@@ -31,8 +32,11 @@
           p.subtitle Drop us an email
           p.email info@mygamedev.asia
           p.copyright.center-block COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
-      .col-md-5
-        img.office-mobile(src='/img/four/office.png')
-      .row.mobile-bottom-background
-      .row.mobile-bottom-spacer
+
+    .row(style="margin-right: 0px; margin-left: 0px; position: absolute; width: 100%;")
+      br
+      br
+      .col-xs-12(style='height: 500px;background-position:50px 10px; background-image: url(/img/four/office.png); background-repeat: no-repeat;')
+    .row.mobile-bottom-background(style="margin-right: 0px; margin-left: 0px;")
+    .row.mobile-bottom-spacer(style="margin-right: 0px; margin-left: 0px;")
 
