--- a/views/index/four.jade
+++ b/views/index/four.jade
@@ -1,6 +1,6 @@
 .four
   .hidden-xs.hidden-sm
-    .row.md-container(style="max-width: 1024px;")
+    .row.md-container
       .col-md-6.col-md-offset-1
         .contact-sheet
           img.banner(src='/img/four/sm.png')
@@ -12,11 +12,12 @@
           p.subtitle Drop us an email
           p.email info@mygamedev.asia
           p.copyright COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
-      .col-md-5
-        img.office(src='/img/four/office.png')
+      .col-md-5(style='padding-left: 0px; padding-right: 0px;')
+        div(style='height: 600px;background-position:0px 95px; background-image: url(/img/four/office.png); background-repeat: no-repeat;')
+        //img.office(src='/img/four/office.png')
 
-    .row.bottom-background
-    .row.bottom-spacer
+    .row.bottom-background(style="margin-right: 0px; margin-left: 0px;")
+    .row.bottom-spacer(style="margin-right: 0px; margin-left: 0px;")
 
   .visible-xs.visible-sm
 
