--- a/views/index/four.jade
+++ b/views/index/four.jade
@@ -13,7 +13,7 @@
           p.email info@mygamedev.asia
           p.copyright COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
       .col-md-5(style='padding-left: 0px; padding-right: 0px;')
-        div(style='height: 600px;background-position:0px 95px; background-image: url(/img/four/office.png); background-repeat: no-repeat;')
+        div(style='height: 600px;background-position:0px 95px; background-image: url(/img/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
         //img.office(src='/img/four/office.png')
 
     .row.bottom-background(style="margin-right: 0px; margin-left: 0px;")
@@ -37,7 +37,7 @@
     .row(style="margin-right: 0px; margin-left: 0px; position: absolute; width: 100%;")
       br
       br
-      .col-xs-12(style='height: 500px;background-position:50px 10px; background-image: url(/img/four/office.png); background-repeat: no-repeat;')
+      .col-xs-12(style='height: 500px;background-position:50px 10px; background-image: url(/img/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
     .row.mobile-bottom-background(style="margin-right: 0px; margin-left: 0px;")
     .row.mobile-bottom-spacer(style="margin-right: 0px; margin-left: 0px;")
 
