--- a/views/index/one.jade
+++ b/views/index/one.jade
@@ -14,28 +14,14 @@
     .col-md-5.hidden-sm.hidden-xs
       img.dirigible.hidden-sm.hidden-xs(src='/img/one/dirigible.png')
       p.title WELCOME
-      p.desc
-        | Welcome to MyGameDev’s Community Web-
-        br
-        | site, a portal that unites the industry’s practi-
-        br
-        | tioners, policy makers, parents, students, edu-
-        br
-        | cators, start-ups and investors.
+      p.desc Welcome to MyGameDev’s Community Website, a portal that unites the industry’s practitioners, policy makers, parents, students, educators, start-ups and investors.
       img.arrow(src='/img/one/down.png')
       p.scroll SCROLL TO EXPLORE!
 
 
     .col-sm-12.visible-sm.visible-xs.text-center
       p.title-mobile WELCOME
-      p.desc-mobile
-        | Welcome to MyGameDev’s Community Web-
-        br
-        | site, a portal that unites the industry’s practi-
-        br
-        | tioners, policy makers, parents, students, edu-
-        br
-        | cators, start-ups and investors.
+      p.desc-mobile Welcome to MyGameDev’s Community Website, a portal that unites the industry’s practitioners, policy makers, parents, students, educators, start-ups and investors.
       img.arrow-mobile(src='/img/one/down.png')
       p.scroll-mobile SCROLL TO EXPLORE!
   .spacer
