corrected text reflow againasdiansidnasdasd

--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -161,6 +161,8 @@
   font-size: 30px;
 }
 .two-a .desc-mobile {
+  max-width: 330px;
+  margin: 0 auto;
   padding-top: 15px;
   font-size: 13px;
   font-weight: 600;
