--- a/views/index/twoa.jade
+++ b/views/index/twoa.jade
@@ -14,16 +14,7 @@
           | WHAT IS
           br
           | GAME DEVELOPMENT ?
-        p.desc
-          | Game Development is the process, techniques,
-          br
-          | theories and practices related to the creation of
-          br
-          | digital games. This also encompasses consoles,
-          br
-          | desktop PCs, online/browser games as well as mobile
-          br
-          | and portable devices.
+        p.desc Game Development is the process, techniques, theories and practices related to the creation of digital games. This also encompasses consoles, desktop PCs, online/browser games as well as mobile and portable devices.
 
 
   // Small
@@ -41,16 +32,7 @@
           | WHAT IS
           br
           | GAME DEVELOPMENT ?
-        p.desc-mobile
-          | Game Development is the process, techniques,
-          br
-          | theories and practices related to the creation of
-          br
-          | digital games. This also encompasses consoles,
-          br
-          | desktop PCs, online/browser games as well as mobile
-          br
-          | and portable devices.
+        p.desc-mobile Game Development is the process, techniques, theories and practices related to the creation of digital games. This also encompasses consoles, desktop PCs, online/browser games as well as mobile and portable devices.
 
 
 
