--- a/views/index/twoa.jade
+++ b/views/index/twoa.jade
@@ -10,10 +10,9 @@
       .col-sm-12.col-md-6
         img.img-responsive.controller(src='/img/two/controller.png')
       .col-sm-12.col-md-6
-        p.title
-          | WHAT IS
-          br
-          | GAME DEVELOPMENT ?
+        p
+          .row.title WHAT IS
+          .row.title GAME DEVELOPMENT ?
         p.desc Game Development is the process, techniques, theories and practices related to the creation of digital games. This also encompasses consoles, desktop PCs, online/browser games as well as mobile and portable devices.
 
 
@@ -36,4 +35,5 @@
 
 
 
-  div(style="height: 150px;")
+  div.hidden-sm.hidden-xs(style="height: 200px;")
+  div.visible-sm.visible-xs(style="height: 150px;")
