--- a/views/index/twoa.jade
+++ b/views/index/twoa.jade
@@ -4,7 +4,7 @@
   .hidden-sm.hidden-xs
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-md-6
-        img.pincers(src='/img/two/pincers.png')
+        img.pincers.slideRight(src='/img/two/pincers.png')
       .spacer
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-sm-12.col-md-6
