--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -19,4 +19,5 @@ head(lang='en')
   title MYGAMEDEV
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.min.css')
+  link(rel='stylesheet', href='/css/animation.css')
   link(rel='stylesheet', href='/css/mgd.css')
