--- a/views/index/three.jade
+++ b/views/index/three.jade
@@ -62,7 +62,7 @@
           .news-frame
             .title NEWS
             .subtitle 13 Sept 2014
-            .content We're at Animagaki!
+            .content Coming Soon!
             .more ...View More
     .row(style="margin-right: 0px; margin-left: 0px;")
       .col-xs-12.lobby-container
