--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -2,4 +2,7 @@ script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
 script(src='/js/menu.js')
-script(src='/js/index.js')
+
+case page
+  when 'index'
+    script(src='/js/index.js')
