fill in menu items

--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -1,8 +1,16 @@
 nav#slide-menu
-   ul
-     .top
-     li
-       a(href='/') HOME
-     li
-       a(href='/about') ABOUT
-     .bottom
+  ul
+    .top
+
+    li
+      a(href='/') HOME
+    li
+      a(href='/about') ABOUT US
+    li
+      a(href='/news') NEWS & ARTICLES
+    li
+      a(href='/directory') DIRECTORY
+    li
+      a(href='/faq') FAQ
+
+    .bottom
