--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -2,7 +2,7 @@
 /* Sliding Menu Item                                                    */
 /* ==================================================================== */
 nav#slide-menu {
-    background: white;
+    background: #51b5b2;
     display: block;
     position: fixed;
     top: 0;
@@ -11,7 +11,6 @@ nav#slide-menu {
     float: right;
     width: 100%;
     max-width: 240px;
-    /*height: 100%;*/
     transition: all 300ms;
 }
 
@@ -24,9 +23,12 @@ nav#slide-menu > ul {
     padding: 0;
     list-style: none;
     transition: all 300ms;
+    text-align: center;
 }
 nav#slide-menu > ul li a {
-    color: grey;
+    font-size: 14px;
+    font-weight: bold;
+    color: #0a3e38;
     text-decoration: none;
 }
 
@@ -36,28 +38,20 @@ nav#slide-menu > ul li a:hover {
 }
 
 nav#slide-menu > ul li {
-    font-size: 11px;
-    border-bottom: 1px solid #808080;
-    color: #808080;
     cursor: pointer;
     padding: 15px 0px 15px 20px;
 }
 nav#slide-menu > ul li:hover {
     color: #ffffff;
 }
-nav#slide-menu > ul li:nth-child(2) {
-    border-top: 1px solid grey;
-}
 
 nav > ul .top {
     height: 1px;
     padding-bottom: 3px;
-    border-top: 1px solid #808080;
 }
 nav > ul .bottom {
     height: 1px;
     padding-top: 3px;
-    border-bottom: 1px solid #808080;
 }
 
 body.menu-active nav#slide-menu {
