move files into their own section

--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -118,7 +118,7 @@
 
 /* TWO A */
 .two-a {
-  background-image: url("../img/two/board.png");
+  background-image: url("../img/index/two/board.png");
   background-position: 50% 35%;
   background-size: auto;
   margin-left: -15px;
