--- a/views/index/one.jade
+++ b/views/index/one.jade
@@ -1,27 +1,27 @@
 .one
   .row(style="margin-right: 15px; margin-left: 15px;")
     .col-sm-12.text-center
-      img.one-mast(src='/img/one/mast.png')
-      img.one-minimast.img-responsive(src='/img/one/minimast.png')
+      img.one-mast(src='/img/index/one/mast.png')
+      img.one-minimast.img-responsive(src='/img/index/one/minimast.png')
   br
   .row(style="margin-right: 5px; margin-left: 5px;")
     .col-md-7.text-right.factory-container.hidden-sm.hidden-xs
-      img.factory(src='/img/one/factory.png')
+      img.factory(src='/img/index/one/factory.png')
     .col-sm-12.text-center.visible-sm.visible-xs
-      img.img-responsive(src='/img/one/factory.png')
+      img.img-responsive(src='/img/index/one/factory.png')
 
 
     .col-md-5.hidden-sm.hidden-xs
-      img.dirigible.hidden-sm.hidden-xs(src='/img/one/dirigible.png')
+      img.dirigible.hidden-sm.hidden-xs(src='/img/index/one/dirigible.png')
       p.title WELCOME
       p.desc Welcome to MyGameDev’s Community Website, a portal that unites the industry’s practitioners, policy makers, parents, students, educators, start-ups and investors.
-      img.arrow(src='/img/one/down.png')
+      img.arrow(src='/img/index/one/down.png')
       p.scroll SCROLL TO EXPLORE!
 
 
     .col-sm-12.visible-sm.visible-xs.text-center
       p.title-mobile WELCOME
       p.desc-mobile Welcome to MyGameDev’s Community Website, a portal that unites the industry’s practitioners, policy makers, parents, students, educators, start-ups and investors.
-      img.arrow-mobile(src='/img/one/down.png')
+      img.arrow-mobile(src='/img/index/one/down.png')
       p.scroll-mobile SCROLL TO EXPLORE!
   .spacer
