--- a/views/index/twoa.jade
+++ b/views/index/twoa.jade
@@ -4,11 +4,11 @@
   .hidden-sm.hidden-xs
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-md-6
-        img.pincers.slideRight(src='/img/two/pincers.png')
+        img.pincers.slideRight(src='/img/index/two/pincers.png')
       .spacer
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-sm-12.col-md-6
-        img.img-responsive.controller(src='/img/two/controller.png')
+        img.img-responsive.controller(src='/img/index/two/controller.png')
       .col-sm-12.col-md-6
         p
           .row.title WHAT IS
@@ -20,12 +20,12 @@
   .visible-sm.visible-xs.text-center
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-xs-12
-        img.pincers-mobile(src='/img/two/pincers.png')
+        img.pincers-mobile(src='/img/index/two/pincers.png')
       .spacer
     .row(style="margin-right: 10px; margin-left: 10px;")
       .col-xs-12
         .controller-mobile-container
-          img.controller-mobile.img-responsive(src='/img/two/controller.png')
+          img.controller-mobile.img-responsive(src='/img/index/two/controller.png')
       .col-xs-12
         p.title-mobile
           | WHAT IS
