--- a/views/news.jade
+++ b/views/news.jade
@@ -4,6 +4,15 @@ block content
   .row
     img(src='/img/news/News_Sec1.jpg')
   .row
-    img(src='/img/news/News_Sec2.jpg')
+    img(src='/img/news/News_Sec2.jpg' usemap='#newsmap')
+
+    // rofl. /_\
+    map(name='newsmap')
+      area(shape='Rect' coords='620,541,703, 570'  href='http://www.edgy.my/game-malaysia')
+      area(shape='Rect' coords='953,290,1037,320' href='http://www.thestar.com.my/News/Education/2014/06/08/Game-on-for-gamers/' target='_blank')
+      area(shape='Rect' coords='953,390,1037,420' href='http://themalaysianreserve.com/main/news/corporate-malaysia/2573-electronic-games-development-industry-to-grow-under-gtp' target='_blank')
+      area(shape='Rect' coords='953,494,1037,525' href='http://www.scmp.com/article/1046145/kdu-revs-video-game-development-mygamedev' target='_blank')
+      area(shape='Rect' coords='953,590,1037,621' href='http://etp.pemandu.gov.my/28_May_2012-@-Game_Development_Cluster.aspx' target='_blank')
+      area(shape='Rect' coords='953,695,1037,725' href='https://my.news.yahoo.com/blogs/pc-com/kdu-university-college-kicks-off-mygamedev2020-075514193.html' target='_blank')
 
   include index/four
