center everything and add a top bar in css instead of image

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,12 +2,15 @@ extends layout_page
 block content
 
   .row
+    div(style='border-top: 7px solid #F48374')
+
+  .row.text-center
     img(src='/img/about/About_Sec1.jpg')
-  .row
+  .row.text-center
     img(src='/img/about/About_Sec2.jpg')
-  .row
+  .row.text-center
     img(src='/img/about/About_Sec3.jpg')
-  .row
+  .row.text-center
     img(src='/img/about/About_Sec4.jpg')
 
   include index/four
