--- a/views/news.jade
+++ b/views/news.jade
@@ -2,8 +2,11 @@ extends layout_page
 block content
 
   .row
+    div(style='border-top: 7px solid #F48374')
+
+  .row.text-center
     img(src='/img/news/News_Sec1.jpg')
-  .row
+  .row.text-center(style='background-color: #DD5374')
     img(src='/img/news/News_Sec2.jpg' usemap='#newsmap')
 
     // rofl. /_\
