background colour for news page

--- a/views/news.jade
+++ b/views/news.jade
@@ -4,7 +4,7 @@ block content
   .row
     div(style='border-top: 7px solid #F48374')
 
-  .row.text-center
+  .row.text-center(style='background-color: #1fb1c0')
     img(src='/img/news/News_Sec1.jpg')
   .row.text-center(style='background-color: #DD5374')
     img(src='/img/news/News_Sec2.jpg' usemap='#newsmap')
