centralized and change the pictures to play even more cheats

--- a/views/about.jade
+++ b/views/about.jade
@@ -4,13 +4,19 @@ block content
   .row
     div(style='border-top: 7px solid #F48374')
 
-  .row.text-center
+  .row.text-center(style='background-color: #78CDCE')
     img(src='/img/about/About_Sec1.jpg')
-  .row.text-center
+
+  .row.text-center(style='background-color: #feebc1')
     img(src='/img/about/About_Sec2.jpg')
-  .row.text-center
+
+  .row.text-center(style='background-color: #f47072')
     img(src='/img/about/About_Sec3.jpg')
-  .row.text-center
-    img(src='/img/about/About_Sec4.jpg')
+
+  .row.text-center(style='background-color: #00716e')
+    img(src='/img/about/About_Sec4a.jpg')
+
+  .row.text-center(style='background-color: #e5f0d3')
+    img(src='/img/about/About_Sec4b.jpg')
 
   include index/four
