--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -6,3 +6,5 @@ script(src='/js/menu.js')
 case page
   when 'index'
     script(src='/js/index.js')
+  when 'directory'
+    script(src='/js/directory.js')
