--- a/views/page_faq.jade
+++ b/views/page_faq.jade
@@ -1,3 +1,27 @@
 extends layout_page
 block content
+
+  .row
+    div(style='border-top: 7px solid #F48374')
+
+
+  .row.text-center(style='background-color: #fbbda3')
+    img(src='/img/faq/FAQ_Header.jpg')
+  .row.text-center(style='background-color: #fee8d4')
+    img(src='/img/faq/FAQ_Sec2.jpg')
+
+
+  // Faq Section
+  .row.text-center(style='background-color: #fee8d4')
+    img(src='/img/faq/FAQ_GamesIndustry.jpg')
+  .row.text-center(style='background-color: #fee8d4')
+    img(src='/img/faq/FAQ_GameDevelopment.jpg')
+  .row.text-center(style='background-color: #fee8d4')
+    img(src='/img/faq/FAQ_Students&parents.jpg')
+
+
+  .row.text-center(style='background-color: #fee8d4')
+    img(src='/img/faq/FAQ_Sec4.jpg')
+
+
   include index/four
