aspodkasdka;sdkal;skd;alksdo;aksd;akdl;qks;klkdfjakldfj

--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -8,3 +8,5 @@ case page
     script(src='/js/index.js')
   when 'directory'
     script(src='/js/directory.js')
+  when 'faq'
+    script(src='/js/faq.js')
