--- a/views/page_faq.jade
+++ b/views/page_faq.jade
@@ -8,20 +8,22 @@ block content
   .row.text-center(style='background-color: #fbbda3')
     img(src='/img/faq/FAQ_Header.jpg')
   .row.text-center(style='background-color: #fee8d4')
-    img(src='/img/faq/FAQ_Sec2.jpg')
+    img(src='/img/faq/FAQ_Sec2.jpg' usemap='contentmap')
 
+  map(name='contentmap')
+    area#gamedevb(shape='Rect' coords='310,66,622,136'  href='#')
+    area#gameidsb(shape='Rect' coords='663,66,973,136'  href='#')
+    area#stdnprtb(shape='Rect' coords='310,159,622,228' href='#')
+    //area#generalb(shape='Rect' coords='663,159,973,228' href='#')
 
-  // Faq Section
-  .row.text-center(style='background-color: #fee8d4')
+  #gamedev.row.text-center(style='background-color: #fee8d4')
     img(src='/img/faq/FAQ_GamesIndustry.jpg')
-  .row.text-center(style='background-color: #fee8d4')
+  #gameids.row.text-center(style='background-color: #fee8d4')
     img(src='/img/faq/FAQ_GameDevelopment.jpg')
-  .row.text-center(style='background-color: #fee8d4')
+  #stdnprt.row.text-center(style='background-color: #fee8d4')
     img(src='/img/faq/FAQ_Students&parents.jpg')
-
 
   .row.text-center(style='background-color: #fee8d4')
     img(src='/img/faq/FAQ_Sec4.jpg')
-
 
   include index/four
