--- a/views/page_about.jade
+++ b/views/page_about.jade
@@ -1,22 +1,11 @@
 extends layout_page
 block content
-
   .row
     div(style='border-top: 7px solid #F48374')
+  include about/1
 
-  .row.text-center(style='background-color: #78CDCE')
-    img(src='/img/about/About_Sec1.jpg')
-
-  .row.text-center(style='background-color: #feebc1')
-    img(src='/img/about/About_Sec2.jpg')
-
-  .row.text-center(style='background-color: #f47072')
-    img(src='/img/about/About_Sec3.jpg')
-
-  .row.text-center(style='background-color: #00716e')
-    img(src='/img/about/About_Sec4a.jpg')
-
-  .row.text-center(style='background-color: #e5f0d3')
-    img(src='/img/about/About_Sec4b.jpg')
-
-  include index/four
+  include about/2
+  include about/3
+  include about/4
+  include about/5
+  include about/6
