--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -27,9 +27,20 @@
   letter-spacing: 0.05em;
 }
 
+/* Common Stuff */
+.section      { margin-left: -15px; margin-right: -15px; }
+.section .row { margin-left:  15px; margin-right:  15px; }
+
+.section .img-responsive { margin: 0 auto;       }
+
+.section .spacer-80      { padding-bottom: 80px; }
+.section .spacer-20      { padding-bottom: 20px; }
+.section .spacer-10      { padding-bottom: 10px; }
 
 
-
+/*****************************/
+/*  Old Stuff From the index */
+/*****************************/
 /* ONE */
 .one {
   background-color: #FFF0D8;
