something something something

--- a/views/about/2.jade
+++ b/views/about/2.jade
@@ -1,10 +1,39 @@
-.row(style='background-color: #FEEBC1')
+.section(style='background-color: #FEEBC1')
+  .spacer-80
+
+  .row(style='max-width: 900px; margin: 0 auto;')
+    .col-md-6
+      .row.text-center
+        .row
+          h1(style='color:#61464B')
+            | WHY IS IT
+            br
+            | IMPORTANT ?
+        .row
+          .spacer-20
+          p.text-center(style='max-width: 350px; margin: 0 auto; color: #719933; font-size: 16px; font-weight: 400; ') The game development cluster represents the start of a strategic collaboration between educational institutions and industry sectors to create a high-income and sustainable creative economy in the area of game development.
+          .spacer-80.hidden-sm.hidden-xs
+          .spacer-80.hidden-sm.hidden-xs
+
+      .row.hidden-sm.hidden-xs
+        img(style='position: absolute; right: 0; bottom:-38px;', src='/img/about/about_road_stuff.png')
+
+    .col-md-6.hidden-sm.hidden-xs
+      .row
+        img(style='position: absolute; left: 15px; bottom:-453px;', src='/img/about/about_road_monster.png')
+
+  .row.visible-sm.visible-xs
+    .spacer-80
+    .spacer-80
+    .spacer-80
+    .spacer-80
+    .col-xs-12
+      img.img-responsive(style='position: absolute;left: 0; right: 0; bottom: -47px;', src='/img/about/about_road_monster_mobile.png')
 
 
-// The Road
-.row
-   div(style='border-top: 26px solid #D0D3C7')
-   div(style='border-top: 17px solid #5E5E5E')
-   div(style='border-top: 4px dashed #888B8F; background: #5E5E5E; ')
-   div(style='border-top: 17px solid #5E5E5E')
-   div(style='border-top: 26px solid #D0D3C7')
+  // The Road
+  div(style='border-top: 26px solid #D0D3C7')
+  div(style='border-top: 17px solid #5E5E5E')
+  div(style='border-top: 4px dashed #888B8F; background: #5E5E5E; ')
+  div(style='border-top: 17px solid #5E5E5E')
+  div(style='border-top: 26px solid #D0D3C7')
