--- a/views/about/1.jade
+++ b/views/about/1.jade
@@ -6,24 +6,22 @@
       img.img-responsive(src='/img/about/about_kites.png')
 
   .row
-
     .col-md-7.text-right.hidden-sm.hidden-xs
-      img( src='/img/about/about_factory.png')
+      img(src='/img/about/about_factory.png')
     .col-sm-12.visible-sm.visible-xs
       img.img-responsive(src='/img/about/about_factory.png')
       .spacer-80
 
 
-
-    .col-md-3.hidden-sm.hidden-xs
+    .col-md-4.hidden-sm.hidden-xs
       .row.text-center
         img(src='/img/about/about_mygamedev.png')
         .spacer-20
       .row.text-center
-        h1(style='font-family: Oswald Bold; font-size 45px;') ABOUT
+        h1.mast-title ABOUT
       .row.text-center
         .spacer-10
-        p(style='color: #216865; font-size: 16px; font-weight: 400;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
+        p.mast-desc(style='color: #216865;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
 
 
 
@@ -32,10 +30,9 @@
         img(src='/img/about/about_mygamedev.png')
         .spacer-20
       .row.text-center
-        h1(style='font-family: Oswald Bold; font-size 45px;') ABOUT
+        h1.mast-title(style='font-family: Oswald Bold; ') ABOUT
       .row.text-center
         .spacer-10
         p(style='color: #216865; font-size: 16px; font-weight: 400; max-width: 350px; margin: 0 auto;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
-
 
   .spacer-80
