--- a/views/about/3.jade
+++ b/views/about/3.jade
@@ -1,1 +1,43 @@
-.row(style='background-color: #F47072')
+.section(style='background-color: #F47072')
+  .spacer-80
+  .row
+    .col-md-5.col-md-offset-1.text-right
+      .row
+        img.img-responsive(style="height: 261px;", src='/img/about/about_motif_emblem.svg')
+        .spacer-20
+      .row
+        img.img-responsive(src='/img/about/about_motif_city.png')
+
+    .col-md-5.text-center
+      .row
+        .spacer-20
+        .spacer-20
+        .spacer-20
+
+      .row
+        .col-xs-6
+          img(style='height:100px;', src='/img/about/about_motif_cup.svg')
+          .spacer-10
+          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Leading Game Development Centre In The Region.
+        .col-xs-6
+          img(style='height:100px;', src='/img/about/about_motif_profile.svg')
+          .spacer-10
+          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') A Creator Of High-quality Creative Talents And Content.
+
+      .row
+        .spacer-20
+        .spacer-20
+
+      .row
+        .col-xs-6
+          img(style='height:100px;', src='/img/about/about_motif_hands.svg')
+          .spacer-10
+          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Incubation And Support Hub For Independent Game Developers.
+        .col-xs-6
+          img(style='height:100px;', src='/img/about/about_motif_aid.svg')
+          .spacer-10
+          p(style='font-family: "Avenir-Black"; color: #F4EAE0; max-width:160px; margin: 0 auto;') An Attractive Package For Foreign Game Developers And Investors.
+
+
+  .row
+    .spacer-80
