change the fonts

--- a/views/about/2.jade
+++ b/views/about/2.jade
@@ -5,13 +5,13 @@
     .col-md-6
       .row.text-center
         .row
-          h1(style='color:#61464B')
+          h1(style='color:#61464B; font-family: "Oswald Bold"; ')
             | WHY IS IT
             br
             | IMPORTANT ?
         .row
           .spacer-20
-          p.text-center(style='max-width: 350px; margin: 0 auto; color: #719933; font-size: 16px; font-weight: 400; ') The game development cluster represents the start of a strategic collaboration between educational institutions and industry sectors to create a high-income and sustainable creative economy in the area of game development.
+          p.text-center(style='max-width: 350px; margin: 0 auto; color: #719933; font-size: 16px; font-weight: 400; font-family: "Avenir-Heavy";') The game development cluster represents the start of a strategic collaboration between educational institutions and industry sectors to create a high-income and sustainable creative economy in the area of game development.
           .spacer-80.hidden-sm.hidden-xs
           .spacer-80.hidden-sm.hidden-xs
 
