mouse over partner logo highlight stuff

--- a/views/about/5.jade
+++ b/views/about/5.jade
@@ -1,1 +1,34 @@
-.row(style='background-color: #DBE6C8')
+.section(style='background-color: #e5efcf')
+  .row
+    .spacer-80
+
+
+  .row.text-center
+    .row
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_codemasters.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_igda.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_lemonsky.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_mdec.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_mmu.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_mouselogo.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_pmo.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_sultanidris.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_utar.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_tarc.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_utem.png')
+      .col-md-2.col-sm-4.col-xs-6.text-center
+        img.partner(src='/img/about/about_partner_wigu.png')
+
+  .row
+    .spacer-80
