--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,3 +1,4 @@
+
 script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
@@ -10,3 +11,5 @@ case page
     script(src='/js/directory.js')
   when 'faq'
     script(src='/js/faq.js')
+  when 'about'
+    script(src='/js/about.js')
