made stuff fit inside

--- a/views/about/1.jade
+++ b/views/about/1.jade
@@ -7,7 +7,7 @@
 
   .row
     .col-md-7.text-right.hidden-sm.hidden-xs
-      img(src='/img/about/about_factory.png')
+      img.img-responsive(src='/img/about/about_factory.png')
     .col-sm-12.visible-sm.visible-xs
       img.img-responsive(src='/img/about/about_factory.png')
       .spacer-80
