--- a/views/about/2.jade
+++ b/views/about/2.jade
@@ -16,11 +16,11 @@
           .spacer-80.hidden-sm.hidden-xs
 
       .row.hidden-sm.hidden-xs
-        img(style='position: absolute; right: 0; bottom:-38px;', src='/img/about/about_road_stuff.png')
+        img.img-responsive(style='position: absolute; right: 0; bottom:-38px;', src='/img/about/about_road_stuff.png')
 
     .col-md-6.hidden-sm.hidden-xs
       .row
-        img(style='position: absolute; left: 15px; bottom:-453px;', src='/img/about/about_road_monster.png')
+        img.img-responsive(style='position: absolute; left: 15px; bottom:-453px;', src='/img/about/about_road_monster.png')
 
   .row.visible-sm.visible-xs
     .spacer-80
