--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,4 +1,5 @@
 
+script(src='/js/ga.js')
 script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
