--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -30,11 +30,11 @@
 .section .mast-desc      { font-weight: 400; font-size: 16px; max-width: 330px; margin: 0 auto; }
 .section .row            { max-width: 1280px; margin: 0 auto; }
 .section .img-responsive { margin: 0 auto;       }
+.section .panel-title    { font-family: Avenir;  }
 .section .spacer-80      { padding-bottom: 80px; }
 .section .spacer-40      { padding-bottom: 40px; }
 .section .spacer-20      { padding-bottom: 20px; }
 .section .spacer-10      { padding-bottom: 10px; }
-
 
 
 
