aome about stuff added

--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,5 +1,6 @@
+if locals.NODE_ENV != 'development'
+  script(src='/js/ga.js')
 
-script(src='/js/ga.js')
 script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
