finalize classroom for faq

--- a/views/faq/4.jade
+++ b/views/faq/4.jade
@@ -1,3 +1,13 @@
-.section(style='background-color: #fee8d4')
-   .row
-      br
+.section(style='background-color: #FAB58F; border-bottom: 45px solid #C46A57')
+
+   // Lights
+   .row.text-center.hidden-xs.hidden-sm
+      img(style='width: 900px;', src='/img/faq/faq_room_lights.svg')
+   .row.text-center.visible-xs.visible-sm
+      img.img-responsive(src='/img/faq/faq_room_lights_mobile.png')
+
+   // Room
+   .row.hidden-xs.hidden-sm(style='height: 260px;')
+      img(style='height: 283px; position: absolute; margin: 0 auto; left: 0; right: 0;', src='/img/faq/faq_room_comic.svg')
+   .row.visible-xs.visible-sm(style='height: 248px; margin-right: 10px; margin-left: 10px;')
+      img.img-responsive(style='height: 283px;', src='/img/faq/faq_room_comic_mobile.svg')
