open up all the other tabs

--- a/views/page_faq.jade
+++ b/views/page_faq.jade
@@ -1,34 +1,9 @@
 extends layout_page
 block content
-
   .row
     div(style='border-top: 7px solid #F48374')
-
   include faq/1
   include faq/2
   include faq/3
-  //include faq/4
-  //include faq/5
-
-
-  //.row.text-center(style='background-color: #fbbda3')
-  //  img(src='/img/faq/FAQ_Header.jpg')
-  //.row.text-center(style='background-color: #fee8d4')
-  //  img(src='/img/faq/FAQ_Sec2.jpg' usemap='contentmap')
-  //
-  //map(name='contentmap')
-  //  area#gamedevb(shape='Rect' coords='310,66,622,136'  href='#')
-  //  area#gameidsb(shape='Rect' coords='663,66,973,136'  href='#')
-  //  area#stdnprtb(shape='Rect' coords='310,159,622,228' href='#')
-  //
-  //#gamedev.row.text-center(style='background-color: #fee8d4')
-  //  img(src='/img/faq/FAQ_GamesIndustry.jpg')
-  //#gameids.row.text-center(style='background-color: #fee8d4')
-  //  img(src='/img/faq/FAQ_GameDevelopment.jpg')
-  //#stdnprt.row.text-center(style='background-color: #fee8d4')
-  //  img(src='/img/faq/FAQ_Students&parents.jpg')
-  //
-  //.row.text-center(style='background-color: #fee8d4')
-  //  img(src='/img/faq/FAQ_Sec4.jpg')
-  //
-  //include index/four
+  include faq/4
+  include faq/5
