--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -4,6 +4,7 @@ if locals.NODE_ENV != 'development'
 script(src='/components/jquery/dist/jquery.min.js')
 script(src='/components/bootstrap/dist/js/bootstrap.min.js')
 script(src='/components/console.image/console.image.min.js')
+script(src='/js/doge.js')
 script(src='/js/menu.js')
 
 case page
