--- a/views/faq/4.jade
+++ b/views/faq/4.jade
@@ -9,5 +9,7 @@
    // Room
    .row.hidden-xs.hidden-sm(style='height: 260px;')
       img(style='height: 283px; position: absolute; margin: 0 auto; left: 0; right: 0;', src='/img/faq/faq_room_comic.svg')
-   .row.visible-xs.visible-sm(style='height: 248px; margin-right: 10px; margin-left: 10px;')
+   .row.visible-sm(style='height: 248px; margin-right: 10px; margin-left: 10px;')
+      img.img-responsive(style='height: 283px;', src='/img/faq/faq_room_comic_mobile.svg')
+   .row.visible-xs(style='height: 235px; margin-right: 10px; margin-left: 10px;')
       img.img-responsive(style='height: 283px;', src='/img/faq/faq_room_comic_mobile.svg')
