--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -76,6 +76,7 @@ div#content {
     border-radius: 0;
     -moz-transition: all 300ms;
     -webkit-transition: all 300ms;
+    -webkit-overflow-scrolling: touch;
     transition: all 300ms;
 }
 
