png versions cause svg got no fonts.

--- a/views/about/3.jade
+++ b/views/about/3.jade
@@ -3,7 +3,7 @@
   .row
     .col-md-5.col-md-offset-1.text-right
       .row
-        img.img-responsive(style="height: 261px;", src='/img/about/about_motif_emblem.svg')
+        img.img-responsive(style="height: 261px;", src='/img/about/about_motif_emblem.png')
         .spacer-20
       .row
         img.img-responsive(src='/img/about/about_motif_city.png')
