--- a/views/about/4.jade
+++ b/views/about/4.jade
@@ -2,4 +2,4 @@
 
   .row(style='height:268px;')
     .col-md-12
-      img.img-responsive(style='position:absolute; left: 0%; right: 0%; top: 1700%; height: 268px; margin: 0 auto;', src='/img/about/about_partners_banner.svg')
+      img.img-responsive(style='position:absolute; left: 0%; right: 0%; top: 1700%; height: 268px; margin: 0 auto;', src='/img/about/about_partners_banner.png')
