--- a/views/about/1.jade
+++ b/views/about/1.jade
@@ -15,24 +15,24 @@
 
     .col-md-4.hidden-sm.hidden-xs
       .row.text-center
-        img(src='/img/about/about_mygamedev.png')
+        img(style='height:91px;', src='/img/common/emblem.svg')
         .spacer-20
       .row.text-center
         h1.mast-title ABOUT
       .row.text-center
         .spacer-10
-        p.mast-desc(style='color: #216865;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
+        p.mast-desc(style='color: white;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
 
 
 
     .col-sm-12.visible-sm.visible-xs
       .row.text-center
-        img(src='/img/about/about_mygamedev.png')
+        img(style='height:91px;', src='/img/common/emblem.svg')
         .spacer-20
       .row.text-center
         h1.mast-title(style='font-family: Oswald Bold; ') ABOUT
       .row.text-center
         .spacer-10
-        p(style='color: #216865; font-size: 16px; font-weight: 400; max-width: 350px; margin: 0 auto;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
+        p(style='color: white; font-size: 16px; font-weight: 400; max-width: 350px; margin: 0 auto;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
 
   .spacer-80
