make about and news mast the same

--- a/views/about/1.jade
+++ b/views/about/1.jade
@@ -7,11 +7,10 @@
 
   .row
     .col-md-7.text-right.hidden-sm.hidden-xs
-      img.img-responsive(src='/img/about/about_factory.png')
+      img.img-responsive(style='height:360px;', src='/img/about/mast_factory.svg')
     .col-sm-12.visible-sm.visible-xs
-      img.img-responsive(src='/img/about/about_factory.png')
-      .spacer-80
-
+      img.img-responsive(style='height:360px;', src='/img/about/mast_factory.svg')
+      .spacer-40
 
     .col-md-4.hidden-sm.hidden-xs
       .row.text-center
@@ -22,8 +21,6 @@
       .row.text-center
         .spacer-10
         p.mast-desc(style='color: white;') MyGameDev was founded in 2012 when KDU University College was awarded an initiative under the Malaysian Government’s Economic Transformation Plan.
-
-
 
     .col-sm-12.visible-sm.visible-xs
       .row.text-center
