--- a/views/news/1.jade
+++ b/views/news/1.jade
@@ -17,7 +17,7 @@
         img(style='height:91px;', src='/img/common/emblem.svg')
         .spacer-20
       .row.text-center
-        h1.mast-title NEWS
+        h1.mast-title(style='text-shadow: 4px 4px #DC5473;') NEWS
       .row.text-center
         .spacer-10
         p.mast-desc(style='color: white;') Read and watch the latest news and interviews, fresh from the front lines of the local gaming industry.
@@ -27,9 +27,9 @@
         img(style='height:91px;', src='/img/common/emblem.svg')
         .spacer-20
       .row.text-center
-        h1.mast-title(style='font-family: Oswald Bold; ') NEWS
+        h1.mast-title(style='text-shadow: 4px 4px #DC5473;') NEWS
       .row.text-center
         .spacer-10
-        p(style='color: white; font-size: 16px; font-weight: 400; max-width: 350px; margin: 0 auto;') Read and watch the latest news and interviews, fresh from the front lines of the local gaming industry.
+        p.mast-desc(style='color: white; font-size: 16px; font-weight: 400; max-width: 350px; margin: 0 auto;') Read and watch the latest news and interviews, fresh from the front lines of the local gaming industry.
 
   .spacer-80
