--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -26,7 +26,7 @@
 /****************/
 
 .section                 { margin-left: -15px; margin-right: -15px; }
-.section .mast-title     { font-family: "Oswald Bold"; font-size: 45px; }
+.section .mast-title     { font-family: "Oswald Bold"; font-size: 45px; color: white; }
 .section .mast-desc      { font-weight: 400; font-size: 16px; max-width: 330px; margin: 0 auto; }
 .section .row            { max-width: 1280px; margin: 0 auto; }
 .section .img-responsive { margin: 0 auto;       }
