--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -1,1 +1,112 @@
-.section(style='background-color: #DC5473')
+.section(style='background-color: #DC5473; background-image: url(/img/news/news_background.png); background-repeat:no-repeat; background-position: center center;')
+
+  .row
+    .spacer-40
+
+  .row(style='max-width: 930px;')
+    .row(style='background-color: #FDFAE4; margin-left: 10px; margin-right: 10px;')
+
+      .row
+        .spacer-40
+
+      // The Banner
+      .row(style='background-color: #123B67; margin-left: 28px; margin-right: 28px; box-shadow: 0px 5px #999999;')
+        .row
+          .spacer-10
+        .row
+          .col-sm-4.hidden-xs
+            div(style='border-bottom: 7px solid #FDFAE4; margin-top: 4px; margin-left: 10px;')
+          .col-sm-4.text-center
+            h3(style='color: #FDFAE4; margin-top: 0px; font-family: "Oswald Bold"; font-size: 33px;') NEWS & ARTICLES
+          .col-sm-4.hidden-xs
+            div(style='border-bottom: 7px solid #FDFAE4; margin-top: 4px; margin-right: 10px;')
+
+      .row
+        .spacer-40
+
+      .row(style='margin-left: 28px; margin-right: 28px;')
+        .col-sm-7(style='padding-left: 0px;')
+
+          // TITLE
+          .row(style='font-family: Avenir; font-weight:800; font-size: 16px;padding-bottom: 12px;')
+            .spacer-10
+            .pull-left(style='color: #78AA42') LATEST FEATURE
+            .pull-right(style='color: #69ACB7') 8 SEP 2014
+
+          .row
+            img.img-responsive(style='width: 507px;', src='/img/news/article_gameonmalaysia.jpg')
+
+          .row
+            .spacer-10
+            .title(style='font-family: Avenir; font-weight: 800; font-size: 24px; color: #02ABB8;') GAME ON MALAYSIA
+
+          .row
+            a(style='text-decoration: none;', href='http://www.edgy.my/game-malaysia')
+              div.pull-right(style='background-color: #F1826B; color: white; padding: 5px; padding-left: 15px; padding-right: 15px; font-family: Oswald;') READ
+
+          .row.text-center.hidden-xs
+            img(style='height: 167px; margin-top: 10%', src='/img/news/article_dude.svg')
+
+          .row.visible-xs
+            .spacer-20
+
+
+        .col-sm-5(style='padding-right: 0px;')
+
+          // News Items Header
+          .row.text-center(style='max-width: 305px;')
+            img(style='width: 107px; margin:0 auto;', src='/img/news/canvas_frame_top.svg')
+          .row(style='max-width: 305px; background-color: #78AA42')
+            h4(style='padding-left: 20px; font-family: Avenir; font-weight: 800; font-size: 16px; color: #28622F; padding-top: 5px; padding-bottom: 5px;') MORE NEWS & ARTICLES
+
+          // TODO: fetch data from db.
+          .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
+            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+              div(style='font-size: 14px; font-weight: 800;') GAME ON FOR GAMERS
+              div(style='font-size: 12px;')  8 Jun 2014
+            .col-xs-4.text-center
+              a(style='text-decoration: none;', href='http://www.thestar.com.my/News/Education/2014/06/08/Game-on-for-gamers/')
+                div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
+
+          .row(style='max-width: 305px; background-color: #E7D6B6; padding-top: 10px; padding-bottom: 10px;')
+            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+              div(style='font-size: 13px; font-weight: 800;') ELECTRONIC GAMES DEVELOPMENT INDUSTRY TO GROW...
+              div(style='font-size: 12px;')  20 NOV 2012
+            .col-xs-4.text-center
+              a(style='text-decoration: none;', href='http://themalaysianreserve.com/main/news/corporate-malaysia/2573-electronic-games-development-industry-to-grow-under-gtp')
+                div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
+
+          .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
+            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+              div(style='font-size: 14px; font-weight: 800;') KDU REVS VIDEO GAME DEVELOPMENT FOR MYGAMEDEV
+              div(style='font-size: 12px;')  8 Jun 2014
+            .col-xs-4.text-center
+              a(style='text-decoration: none;', href='http://www.scmp.com/article/1046145/kdu-revs-video-game-development-mygamedev')
+                div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
+
+          .row(style='max-width: 305px; background-color: #E7D6B6; padding-top: 10px; padding-bottom: 10px;')
+            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+              div(style='font-size: 13px; font-weight: 800;') GAME DEVELOPMENT CLUSTER
+              div(style='font-size: 12px;')  20 NOV 2012
+            .col-xs-4.text-center
+              a(style='text-decoration: none;', href='http://etp.pemandu.gov.my/28_May_2012-@-Game_Development_Cluster.aspx')
+                div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
+
+          .row(style='max-width: 305px; background-color: #F0E2C9; padding-top: 10px; padding-bottom: 10px;')
+            .col-xs-7(style='color: #724F3D; font-family: Avenir; margin-left: 15px;')
+              div(style='font-size: 14px; font-weight: 800;') KDU UNIVERSITY COLLEGE KICKS OFF MYGAMEDEV2020
+              div(style='font-size: 12px;')  8 Jun 2014
+            .col-xs-4.text-center
+              a(style='text-decoration: none;', href='https://my.news.yahoo.com/blogs/pc-com/kdu-university-college-kicks-off-mygamedev2020-075514193.html')
+                div(style='background-color: #F1826B; color: white; padding: 5px; font-family: Oswald; margin-top: 30%;') READ
+
+
+          // News Footer
+          .row(style='max-width: 346px;')
+            img(src='/img/news/canvas_frame_bottom.svg')
+
+      .row
+        .spacer-20
+
+  .row
+    .spacer-40
