temp email change

--- a/views/common/contact.jade
+++ b/views/common/contact.jade
@@ -10,7 +10,8 @@
             | ask us any questions ?
           img.email-icon(src="/img/index/four/email.png")
           p.subtitle Drop us an email
-          p.email info@mygamedev.asia
+          // p.email info@mygamedev.asia
+          p.email mygamedev2020@gmail.com
           p.copyright COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
       .col-md-5(style='padding-left: 0px; padding-right: 0px;')
         div(style='height: 600px;background-position:0px 95px; background-image: url(/img/index/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
@@ -31,7 +32,8 @@
             | ask us any questions ?
           img.email-icon(src="/img/index/four/email.png")
           p.subtitle Drop us an email
-          p.email info@mygamedev.asia
+          // p.email info@mygamedev.asia
+          p.email mygamedev2020@gmail.co
           p.copyright.center-block COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
 
     .row(style="margin-right: 0px; margin-left: 0px; position: absolute; width: 100%;")
