--- a/views/page_directory.jade
+++ b/views/page_directory.jade
@@ -34,4 +34,4 @@ block content
     area#institutionsb(    shape='Rect' coords='837,340,953,485'  href='#' )
     area#incubatorb(       shape='Rect' coords='990,340,1120,485' href='#' )
 
-  include index/four
+  include common/contact
