responsive video page

--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -16,3 +16,5 @@ case page
     script(src='/js/faq.js')
   when 'about'
     script(src='/js/about.js')
+  when 'news'
+    script(src='/js/news.js')
