--- a/views/news/3.jade
+++ b/views/news/3.jade
@@ -1,1 +1,80 @@
-.section(style='background-color: #56C4C4;')
+.section(style='background-color: #56C4C4; position: relative;')
+
+  .row.visible-sm.visible-xs(style='background-color: #00878C; position: absolute; top: 50px; width:100%')
+    .text-center(style='color: #EFF8E7; font-family: Oswald; font-size: 36px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') VIDEOS
+
+  // The ladders
+  .row.text-center(style='position: absolute; left: 0; right: 0; bottom: -43px; z-index: 0')
+    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='/img/news/video-ladder.svg')
+  .row.visible-xs.text-center(style='position: absolute; left: 0; right: 0; top: 290px; z-index: 0')
+    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='/img/news/video-ladder.svg')
+
+  // The Stage
+  .row#stage(style='position: relative; height: 760px; z-index: 2; padding-left: 15px; padding-right: 15px;')
+    .row#videoframepad(style='position: absolute; left: 0; right: 0; top: 185px;')
+      .div(style='padding-left: 10px; padding-right: 10px;')
+        .div(style='border: 10px solid #FFE6B0; border-radius:20px; background-color: #FFE6B0; max-width: 860px; box-shadow: 0px 8px #754C24; margin: 0 auto;')
+          .div(style='border: 15px solid #333333; border-radius:10px; background-color: #333333')
+            iframe#videoframe(style='border-left: 7px solid #333333; border-right:7px solid #333333; border-top: none; border-bottom: none;', src='//player.vimeo.com/video/115845897', width='100%', height='510')
+    .row.hidden-xs.text-center(style='position: absolute; left: 0; right: 0; top: 0;')
+      img(style='width:1000px;', src='/img/news/video-mast.svg')
+
+
+  // the plate below the stage
+  .row.hidden-xs.hidden-sm(style='position: relative; margin: 0 auto; max-width: 1045px; z-index: 3; padding-left: 15px; padding-right: 15px;')
+    div(style='border-top: 17px solid #FFE6B0;')
+  .row.hidden-xs.hidden-sm(style='position: relative; margin: 0 auto; max-width: 1045px; z-index: 3; padding-left: 37px; padding-right: 37px;')
+    div(style='border-top:  9px solid #A67C52;')
+  .row.hidden-xs.hidden-sm(style='position: relative; margin: 0 auto; max-width: 1045px; z-index: 3; padding-left: 57px; padding-right: 57px;')
+    div(style='border-top:  7px solid #754C24;')
+
+
+  .row
+    .spacer-10
+
+  // other video content
+  .row(style='padding-left: 15px; padding-right: 30px;')
+    .row(style='position: relative; z-index: 3; max-width: 930px; box-shadow: 14px 8px #007579;')
+      .row(style='background-color: #EE6361; max-width: 930px;')
+        .text-center(style='color: #EFF8E7; font-family: Oswald; font-size: 27px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') PLAYLIST
+      .row(style='background-color: #FFFFFF; max-width: 930px;')
+        .row
+          .spacer-20
+          .spacer-10
+        .row.text-center
+          .col-sm-4
+            .row
+              iframe.small-video(style='border: none;' src='//player.vimeo.com/video/115845896', width='253', height='145')
+              .spacer-20
+            .row.text-left
+              a(style='padding-left: 12px; color: #EE6361; font-family: Avenir; font-size: 16px; font-weight: 800', href='https://vimeo.com/115845896') Interview - Gabrielle Kent
+            .row.text-left
+              p(style='padding-left: 12px; color: #00878C; font-family: Avenir; font-size: 13px;') 1 month ago
+
+
+          .col-sm-4
+            .row
+              iframe.small-video(style='border: none;' src='//player.vimeo.com/video/115845853', width='253', height='145')
+              .spacer-20
+            .row.text-left
+              a(style='padding-left: 12px; color: #EE6361; font-family: Avenir; font-size: 16px; font-weight: 800', href='https://vimeo.com/115845853') Interview - Joh
+            .row.text-left
+              p(style='padding-left: 11px; color: #00878C; font-family: Avenir; font-size: 13px;') 1 month ago
+
+          .col-sm-4
+            .row
+              iframe.small-video(style='border: none;' src='//player.vimeo.com/video/115845852', width='253', height='145')
+              .spacer-20
+            .row.text-left
+              a(style='padding-left: 11px; color: #EE6361; font-family: Avenir; font-size: 16px; font-weight: 800', href='https://vimeo.com/115845852') Interview - Jennifer Clixby
+            .row.text-left
+              p(style='padding-left: 11px; color: #00878C; font-family: Avenir; font-size: 13px;') 1 month ago
+        .row
+          .spacer-40
+
+  .row
+    .spacer-40
+    .spacer-40
+    .spacer-40
+
+div(style='margin: 0 -15px; border-top: 43px solid #007579')
