responsive video page

--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -103,7 +103,7 @@
 
           // News Footer
           .row(style='max-width: 346px;')
-            img(src='/img/news/canvas_frame_bottom.svg')
+            img.img-responsive(src='/img/news/canvas_frame_bottom.svg')
 
       .row
         .spacer-20
