added fitvids into components

--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -7,14 +7,20 @@ script(src='/components/console.image/console.image.min.js')
 script(src='/js/doge.js')
 script(src='/js/menu.js')
 
+
 case page
   when 'index'
     script(src='/js/index.js')
+
   when 'directory'
     script(src='/js/directory.js')
+
   when 'faq'
     script(src='/js/faq.js')
+
   when 'about'
     script(src='/js/about.js')
+
   when 'news'
+    script(src='/components/fitvids/jquery.fitvids.js')
     script(src='/js/news.js')
