--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -1,16 +1,19 @@
-nav#slide-menu
-  ul
-    .top
-
-    li
-      a(href='/') HOME
-    li
-      a(href='/about') ABOUT US
-    li
-      a(href='/news') NEWS & ARTICLES
-    li
-      a(href='/directory') DIRECTORY
-    li
-      a(href='/faq') FAQ
-
-    .bottom
+nav.navbar
+  .navbar-header
+    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+      span.sr-only Toggle navigation
+      span.icon-bar
+      span.icon-bar
+      span.icon-bar
+  #navbar.collapse.navbar-collapse.text-center
+    ul.nav.navbar-nav.text-center.nav-center
+      li.active.text-center
+        a(href='/') HOME
+      li
+        a(href='/about') ABOUT US
+      li
+        a(href='/news') NEWS & ARTICLES
+      li
+        a(href='/directory') DIRECTORY
+      li
+        a(href='/faq') FAQ
