--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -23,6 +23,12 @@
     border: 0px;
 }
 
+.navbar-collapse {
+    border-top: 0px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 .navbar-nav > li > a {
     color: #894040;
     text-shadow: none;
@@ -45,6 +51,10 @@
 .nav.nav-center {
     margin: 0;
     float: none;
+}
+
+.icon-bar {
+    background-color: #894040;
 }
 
 /****************/
